# netcliparsers

./: README.rst  requirements.txt  setup.cfg
netcliparsers/: __init__.py  lib.py
netcliparsers/cisco/: .ios.py.swp  __init__.py  ios.py
netcliparsers/tests/cisco/: tests_ios_data.py
