[metadata]
name = netcliparsers
author = Jochen Bartl
author-email = jochenbartl@mailbox.org
summary = Parser library for screen scraping CLI output from network devices
description-file = README.rst
home-page = https://github.com/verbosemode/netcliparsers
requires-python = >=2.7
classifier = 
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
keywords = parse
